Added option "use cargo cross"
Added option "use cargo insta"

--- a/Makefile.toml
+++ b/Makefile.toml
@@ -9,51 +9,51 @@ rm -r ./out
 '''
 
 [tasks.build-release-windows-32.linux]
-command = "cross"
+{% if use_cross == true %}command = "cross"{% else %}command = "cargo"{% endif %}
 args = ["build", "--release", "--target", "i686-pc-windows-gnu"]
 
 [tasks.build-release-windows-64.linux]
-command = "cross"
+{% if use_cross == true %}command = "cross"{% else %}command = "cargo"{% endif %}
 args = ["build", "--release", "--target", "x86_64-pc-windows-gnu"]
 
 [tasks.build-debug-windows-32.linux]
-command = "cross"
+{% if use_cross == true %}command = "cross"{% else %}command = "cargo"{% endif %}
 args = ["build", "--target", "i686-pc-windows-gnu"]
 
 [tasks.build-debug-windows-64.linux]
-command = "cross"
+{% if use_cross == true %}command = "cross"{% else %}command = "cargo"{% endif %}
 args = ["build", "--target", "x86_64-pc-windows-gnu"]
 
 [tasks.build-release-windows-32.windows]
-command = "cross"
+{% if use_cross == true %}command = "cross"{% else %}command = "cargo"{% endif %}
 args = ["build", "--release", "--target", "i686-pc-windows-msvc"]
 
 [tasks.build-release-windows-64.windows]
-command = "cross"
+{% if use_cross == true %}command = "cross"{% else %}command = "cargo"{% endif %}
 args = ["build", "--release", "--target", "x86_64-pc-windows-msvc"]
 
 [tasks.build-debug-windows-32.windows]
-command = "cross"
+{% if use_cross == true %} command = "cross" {% else %} command = "cargo" {% endif %}
 args = ["build", "--target", "i686-pc-windows-msvc"]
 
 [tasks.build-debug-windows-64.windows]
-command = "cross"
+{% if use_cross == true %}command = "cross"{% else %}command = "cargo"{% endif %}
 args = ["build", "--target", "x86_64-pc-windows-msvc"]
 
 [tasks.build-debug-linux-64]
-command = "cross"
+{% if use_cross == true %}command = "cross"{% else %}command = "cargo"{% endif %}
 args = ["build", "--target", "x86_64-unknown-linux-gnu"]
 
 [tasks.build-release-linux-64]
-command = "cross"
+{% if use_cross == true %}command = "cross"{% else %}command = "cargo"{% endif %}
 args = ["build", "--release", "--target", "x86_64-unknown-linux-gnu"]
 
 [tasks.build-debug-linux-32]
-command = "cross"
+{% if use_cross == true %}command = "cross"{% else %}command = "cargo"{% endif %}
 args = ["build", "--target", "i686-unknown-linux-gnu"]
 
 [tasks.build-release-linux-32]
-command = "cross"
+{% if use_cross == true %}command = "cross"{% else %}command = "cargo"{% endif %}
 args = ["build", "--release", "--target", "i686-unknown-linux-gnu"]
 
 [tasks.debug]
