--- a/cargo-generate.toml
+++ b/cargo-generate.toml
@@ -4,6 +4,16 @@ prompt = "Select library option"
 choices = ["simple", "complex"]
 default = "complex"
 
+[placeholders.use_cross]
+type = "bool"
+prompt = "Use cargo cross?"
+default = true
+
+[placeholders.use_insta]
+type = "bool"
+prompt = "Use cargo insta?"
+default = true
+
 [placeholders.addin_name]
 type = "string"
 prompt = "Название компоненты?"
