--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,11 @@ native-1c = { git = "https://github.com/tuplecats/rust-native-1c" }
 native_api_1c = { git = "https://github.com/Sebekerga/native_api_1c" }
 utf16_lit = "2.0.2"
 {% endif %}
+{% if use_insta == true %}
 [profile.dev.package]
 insta.opt-level = 3
 similar.opt-level = 3
 
 [dev-dependencies]
 insta = { version = "1.31.0", features = ["redactions"] }
+{% endif %}
