Add multi target addin

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,14 +8,11 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-{% if library_option == "complex" %}
-native-1c = { git = "https://github.com/tuplecats/rust-native-1c" }
-{% else %}
-native_api_1c = { git = "https://github.com/Sebekerga/native_api_1c" }
+{% if library_option == "complex" %}native-1c = { git = "https://github.com/tuplecats/rust-native-1c" }
+{% else %}native_api_1c = { git = "https://github.com/Sebekerga/native_api_1c" }
 utf16_lit = "2.0.2"
 {% endif %}
-{% if use_insta == true %}
-[profile.dev.package]
+{% if use_insta == true %}[profile.dev.package]
 insta.opt-level = 3
 similar.opt-level = 3
 
